--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "BlogDbConnectionString": "Server=JOHNWEAVER\\MSSQLSERVER02;Database=Blog;Trusted_Connection=True;TrustServerCertificate=Yes",
+    "BlogAuthDbConnectionString": "Server=JOHNWEAVER\\MSSQLSERVER02;Database=BlogAuth;Trusted_Connection=True;TrustServerCertificate=Yes"
   }
   
 }
