--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BlogDbConnectionString": "Server=JOHNWEAVER\\MSSQLSERVER02;Database=Blog;Trusted_Connection=True;TrustServerCertificate=Yes",
-    "BlogAuthDbConnectionString": "Server=JOHNWEAVER\\MSSQLSERVER02;Database=BlogAuth;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "BlogDbConnectionString": "Server=G00D_0M3N\\SQLEXPRESS;Database=EPGBlog;Trusted_Connection=True;TrustServerCertificate=Yes",
+    "BlogAuthDbConnectionString": "Server=G00D_0M3N\\SQLEXPRESS;Database=EPGBlogAuth;Trusted_Connection=True;TrustServerCertificate=Yes"
   }
   
 }
